Added Template for notes and setup project directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ bin-debug/
 bin-release/
 [Oo]bj/
 [Bb]in/
+CSGY\ 6043\ -\ Design\ and\ Analysis\ of\ Algorithms\ II\ by\ Aaron\ Bernstein/data-structures-and-algorithms/
 
 # Other files and folders
 .settings/
